--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
       }); // end am5.ready()
     </script>
 
-    <div class="mx-auto mt-[100px] max-w-[1200px]">
+    <div class="mx-auto my-[100px] max-w-[1200px]">
       <div class="text-center text-3xl font-bold">
         What Data Ox takes care of in website availability?
       </div>
@@ -804,6 +804,146 @@
               Get <span class="font-semibold text-violet-600">instant alerts</span> for domain
               expirations and potential issues before they impact your users or business.
             </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Data Quality Monitoring Section -->
+    <div class="bg-gray-50 py-[100px]">
+      <div class="mx-auto w-full max-w-[1200px] px-6">
+        <div class="mb-16 text-center">
+          <div class="flex justify-center">
+            <div class="mb-6 rounded-[20px] bg-blue-600 px-4 py-1 text-white">
+              Data Quality Monitoring
+            </div>
+          </div>
+
+          <h2 class="mx-auto mb-6 max-w-[650px] text-center text-4xl font-bold">
+            Never miss critical data due to scraping website changes
+          </h2>
+
+          <p class="mx-auto max-w-[650px] text-xl">
+            DataOx continuously monitors your scraped data to verify that all important fields are
+            present. When websites change their structure, we detect it immediately and prevent data
+            losses before they impact your business.
+          </p>
+        </div>
+
+        <!-- Key Benefits Stats -->
+        <div
+          class="my-16 grid grid-cols-3 gap-8 rounded-[25px] border border-gray-50 bg-white p-12 text-center shadow-lg"
+        >
+          <div>
+            <div class="mb-2 text-4xl font-bold text-green-600">99.9%</div>
+            <div class="mx-auto max-w-[250px] text-center text-lg text-gray-600">
+              data integrity maintained through proactive monitoring
+            </div>
+          </div>
+
+          <div>
+            <div class="mb-2 text-4xl font-bold text-green-600">&lt; 5 min</div>
+            <div class="mx-auto max-w-[250px] text-center text-lg text-gray-600">
+              average detection time for website structure changes
+            </div>
+          </div>
+
+          <div>
+            <div class="mb-2 text-4xl font-bold text-green-600">24/7</div>
+            <div class="mx-auto max-w-[250px] text-center text-lg text-gray-600">
+              continuous monitoring and instant notifications
+            </div>
+          </div>
+        </div>
+
+        <!-- How Data Quality Monitoring Works -->
+        <div class="mb-20">
+          <h3 class="mb-12 text-center text-3xl font-bold text-gray-900">
+            How Data Quality Monitoring Works
+          </h3>
+
+          <!-- 3-Step Visual Process -->
+          <div class="grid grid-cols-3 gap-12">
+            <!-- Step 1: Website Scraping -->
+            <div class="text-center">
+              <div class="mb-6 flex justify-center">
+                <div class="relative rounded-2xl border-4 border-blue-200 bg-white p-4 shadow-xl">
+                  <img
+                    src="assets/data-quality-amazon.png"
+                    class="h-60 w-full rounded-xl object-cover"
+                    alt="Amazon page being scraped"
+                  />
+                  <div
+                    class="absolute -bottom-3 -right-3 flex h-8 w-8 items-center justify-center rounded-full bg-blue-600 text-sm font-bold text-white"
+                  >
+                    1
+                  </div>
+                </div>
+              </div>
+              <h4
+                class="mx-auto mb-3 h-14 max-w-[300px] text-center text-xl font-bold text-blue-600"
+              >
+                When website is changed and the scraper is broken
+              </h4>
+              <p class="text-gray-600">
+                DataOx continuously scrapes your target websites like Amazon, extracting product
+                information, prices, and other critical data points.
+              </p>
+            </div>
+
+            <!-- Step 2: Data Analysis -->
+            <div class="text-center">
+              <div class="mb-6 flex justify-center">
+                <div class="relative rounded-2xl border-4 border-red-200 bg-white p-4 shadow-xl">
+                  <img
+                    src="assets/data-quality-code.svg"
+                    class="h-60 w-full"
+                    alt="JSON with missing fields marked in red"
+                  />
+                  <div
+                    class="absolute -bottom-3 -right-3 flex h-8 w-8 items-center justify-center rounded-full bg-red-600 text-sm font-bold text-white"
+                  >
+                    2
+                  </div>
+                </div>
+              </div>
+              <h4
+                class="mx-auto mb-3 h-14 max-w-[300px] text-center text-xl font-bold text-red-600"
+              >
+                We detect missing data
+              </h4>
+              <p class="text-gray-600">
+                Our system analyzes the extracted data and immediately detects when important fields
+                are missing or corrupted due to website changes.
+              </p>
+            </div>
+
+            <!-- Step 3: Instant Alert -->
+            <div class="text-center">
+              <div class="mb-6 flex justify-center">
+                <div class="relative rounded-2xl border-4 border-green-200 bg-white p-4 shadow-xl">
+                  <img
+                    src="assets/data-quality-notifications.svg"
+                    class="h-60 w-full"
+                    alt="Slack notification about data missing"
+                  />
+                  <div
+                    class="absolute -bottom-3 -right-3 flex h-8 w-8 items-center justify-center rounded-full bg-green-600 text-sm font-bold text-white"
+                  >
+                    3
+                  </div>
+                </div>
+              </div>
+              <h4
+                class="mx-auto mb-3 h-14 max-w-[250px] text-center text-xl font-bold text-green-600"
+              >
+                Notification sent to you and we start fixing
+              </h4>
+              <p class="text-gray-600">
+                You and our team receive immediate Slack notifications when data issues are
+                detected, and we start fixing the problem right away.
+              </p>
+            </div>
           </div>
         </div>
       </div>
