--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 
         <div class="absolute left-0 top-0 z-20 h-full w-full bg-transparent"></div>
 
-        <div class="absolute bottom-0 left-0 z-20 h-[100px] w-[100px] bg-white"></div>
+        <div class="absolute bottom-0 left-0 z-20 h-[100px] w-[100px] bg-gray-50"></div>
       </div>
     </div>
 
@@ -1852,7 +1852,7 @@
       </div>
     </section>
 
-    <footer class="mt-20 border-t border-gray-200 bg-gray-50">
+    <footer class="border-t border-gray-200 bg-gray-50">
       <div class="mx-auto max-w-6xl px-4 py-12">
         <div class="grid grid-cols-1 gap-8 md:grid-cols-5">
           <!-- DataOx Column -->
